// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination on Web renders correctly 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c2 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c3 {
  padding-left: 10px;
  padding-right: 10px;
}

.c4 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c1 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c2 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c3 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      data-testid="results-message"
    >
      Showing 1 - 20 of 21 results
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    />
    <div
      className="c3"
    >
      <a
        href="./2"
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-next"
        >
          <div>
            <span>
              Next
              <span
                className="c4"
              >
                 page
              </span>
            </span>
          </div>
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
              />
            </g>
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Pagination on Web renders next link 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c2 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c3 {
  padding-left: 10px;
  padding-right: 10px;
}

.c4 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c1 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c2 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c3 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      data-testid="results-message"
    >
      Showing 1 - 20 of 41 results
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    />
    <div
      className="c3"
    >
      <a
        href="./2"
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-next"
        >
          <div>
            <span>
              Next
              <span
                className="c4"
              >
                 page
              </span>
            </span>
          </div>
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
              />
            </g>
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Pagination on Web renders prev and next link 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c2 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c3 {
  padding-left: 10px;
  padding-right: 10px;
}

.c4 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c1 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c2 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c3 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      data-testid="results-message"
    >
      Showing 21 - 40 of 41 results
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <a
        href="./1"
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-previous"
        >
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="M98.2,12l3.8,3.8L69.2,72,102,128.2,98.2,132,42,72Z"
              />
            </g>
          </svg>
          <div>
            <span>
              Previous
              <span
                className="c4"
              >
                 page
              </span>
            </span>
          </div>
        </div>
      </a>
    </div>
    <div
      className="c3"
    >
      <a
        href="./3"
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-next"
        >
          <div>
            <span>
              Next
              <span
                className="c4"
              >
                 page
              </span>
            </span>
          </div>
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
              />
            </g>
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Pagination on Web renders prev link 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c2 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c3 {
  padding-left: 10px;
  padding-right: 10px;
}

.c4 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c1 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c2 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c3 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      data-testid="results-message"
    >
      Showing 41 - 41 of 41 results
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <a
        href="./2"
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-previous"
        >
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="M98.2,12l3.8,3.8L69.2,72,102,128.2,98.2,132,42,72Z"
              />
            </g>
          </svg>
          <div>
            <span>
              Previous
              <span
                className="c4"
              >
                 page
              </span>
            </span>
          </div>
        </div>
      </a>
    </div>
    <div
      className="c3"
    />
  </div>
</div>
`;

exports[`Pagination on Web renders results message 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c2 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c3 {
  padding-left: 10px;
  padding-right: 10px;
}

.c4 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c1 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c2 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c3 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      data-testid="results-message"
    >
      Showing 1 - 20 of 21 results
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    />
    <div
      className="c3"
    >
      <a
        href="./2"
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-next"
        >
          <div>
            <span>
              Next
              <span
                className="c4"
              >
                 page
              </span>
            </span>
          </div>
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
              />
            </g>
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Pagination on Web renders with hidden results 1`] = `
.c2 {
  padding-left: 10px;
  padding-right: 10px;
}

.c3 {
  display: none;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

@media (min-width:768px) {
  .c2 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
    <div
      className="c2"
    >
      <a
        href="./2"
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-next"
        >
          <div>
            <span>
              Next
              <span
                className="c3"
              >
                 page
              </span>
            </span>
          </div>
          <svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <g
              fill="#006699"
            >
              <path
                d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
              />
            </g>
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;
